welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  
	var tab = new Array[Color](getMondeHauteur()) 
  
	for (i <- 1 to getMondeHauteur()) {
 	 tab(i) = getCouleurSol();
 	 avance()
	} //remplissage du tableau
  
  colonne()
}
  
	
	for (j <- 1 to getMondeLargeur()) {
    colonne()
  }
    
  

  
def colonne() {
	for (n <- tab) {
   	setCouleurBrosse(n);
   	baisseBrosse();
   	leveBrosse();
   	avance()
 		}
}
